--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@repo/schema": "*",
     "@repo/ui": "*",
+    "dotenv": "^16.4.5",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@repo/schema": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
