--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "packages/*"
   ],
   "dependencies": {
+    "@repo/schema": "*",
+    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
-    "zod": "^3.23.8",
-    "@repo/schema": "*"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   }
 }
