--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@repo/schema": "*",
     "@repo/ui": "*",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.6",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
