Adding the End call feature

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -18,6 +18,7 @@
     "./CreateAnswer": "./CreateAnswer.schema.ts",
     "./IceCandidate": "./IceCandidate.schema.ts",
     "./SendRequest": "./SendRequest.schema.ts",
-    "./CloseTrack": "./CloseTrack.schema.ts"
+    "./CloseTrack": "./CloseTrack.schema.ts",
+    "./CloseConnection": "./CloseConnection.schema.ts"
   }
 }
